[project]
name = "deform_conv2d_onnx_exporter"
version = "2.0.0"
description = "A library to support ONNX export of deform_conv2d in PyTorch using ONNXScript and dynamo-based exporter."
readme = "README.md"
requires-python = ">=3.9,<4"
license = "MIT"
keywords = ["deform_conv2d", "PyTorch", "ONNX", "ONNXScript", "dynamo"]
authors = [
    { name = "nusu-github" }
]
maintainers = [
    { name = "Masamitsu MURASE", email = "masamitsu.murase@gmail.com" }
]
dependencies = ["onnxscript>=0.5.6", "torch>=2.6.0", "torchvision>=0.21.0"]

[project.optional-dependencies]
test = ["onnx", "onnxscript", "onnxruntime"]
package = ["wheel", "twine"]

[project.urls]
Homepage = "https://github.com/nusu-github/deform_conv2d_onnx_exporter"
"Bug Reports" = "https://github.com/nusu-github/deform_conv2d_onnx_exporter/issues"
Source = "https://github.com/nusu-github/deform_conv2d_onnx_exporter"
"Original Repository" = "https://github.com/masamitsu-murase/deform_conv2d_onnx_exporter"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
